# packet-pipeline-engine

./: .gitignore  CMakeLists.txt
docs/: log.md
include/pipeline/: metrics.hpp  packet.hpp  ring_buffer.hpp  stages.hpp
src/: main.cpp  stages.cpp
